--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2145,15 +2145,19 @@ div.messages li {
 
 /*Tabs for Calculator Pages*/
 #overlay{
-    display: none;
+    width: 100%;
+    height: 100%;
     position: absolute;
     background: url(/static/images/back_opacity.png);
     z-index: 1000;
     top: 0;
     left: 0;
+    display: none;
 }
 
+
 #overlay img{
+    display: block;
     position: absolute;
     top: 50%;
     left: 50%;
