--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -109,9 +109,9 @@
 
             //Type into input element inside select
             $(".long-select input").keyup(function(e) {
-                if (e.keyCode == 8) {
+                /*if (e.keyCode == 8) {
                     $(this).val("");
-                }
+                }*/
                 userTypeInput($(this));
             })
 
