Кнопка "обновить" заменена на нарисованную

--- a/insurance/templates/calc/step2.html
+++ b/insurance/templates/calc/step2.html
@@ -172,7 +172,7 @@
                         </div>
 
 
-                        <p><input type="submit" value="Обновить"/></p>
+                        <p><input type="image" src="/static/images/update_button.png" value="Обновить"/></p>
                         </form>
                     </div>
 
