--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2933,8 +2933,10 @@ div.messages li {
 
 .style-checkbox input{
     position: absolute;
-    top: 6px;
-    left: 3px;
+    top: 0px;
+    left: 0px;
+    width: 30px;
+    height: 30px;
     opacity: 0;
     filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 }
