--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2347,6 +2347,33 @@ div.messages li {
     top: 0; left: 0;
 }
 
+#tooltip{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 1000;
+}
+
+#tooltip span{
+    display: block;
+    padding: 10px;
+    width: 150px;
+    min-height: 30px;
+    background: #fff;
+    border: 2px solid #ac826f;
+    font-size: 11px;
+    color: #8a4e33;
+    text-align: left;
+    font-weight: normal;
+}
+
+#tooltip img{
+    display: block;
+    margin: -2px 0 0 20px;
+    padding: 0;
+}
+
 
 #result-table-step2 #autodata-step1{
     width: 188px;
