временно модифицирована функция ховера на всех селектах, содержащих инпуты - блок со значениями не прячется, пока не выберешь значение.

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -148,7 +148,14 @@
                 $(this).select();
             })
 
-          
+
+            //Hide on focus lost
+
+            $("#long-1").find("input").focus(function(){
+                $(this).find(".jScrollPaneContainer").css("visibility", "visible");
+            })
+
+
 
             //Clear additional drivers info
             $("#info-main-driver .hide select").val("");
