--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2553,10 +2553,15 @@ div.messages li {
 
 #price-slider-container #current{
     position: absolute;
-    top: 3px;
+    top: 1px;
     left: 13px;
     font-size: 11px;
     color: #fff;
+    width: 48px;
+    padding-top: 2px;
+    overflow: hidden;
+    background: none;
+    border:  none;
 }
 
 #franchize select{
