--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2813,7 +2813,7 @@ div.messages li {
     -webkit-box-shadow:0px 3px 9px #333333;
 }
 
-#first-select.long-select ul{
+#first-select.long-select .inner-container{
     position: absolute;
     top: 34px;
     left: 3px;
@@ -2828,13 +2828,17 @@ div.messages li {
     font-size: 14px;
 }
 
-#first-select.long-select ul li{
+#first-select.long-select .inner-container div{
+    float: left;
+}
+
+#first-select.long-select .inner-container span{
     list-style: none;
     padding: 5px 0 5px 20px;
-    float: left;
     border:  none;
     width: 156px;
     cursor: pointer;
+    display: block;
 }
 
 #first-select a{
