--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2815,7 +2815,7 @@ div.messages li {
 
 #first-select.long-select .inner-container{
     position: absolute;
-    top: 34px;
+    top: 33px;
     left: 3px;
     background: #f8f5f5;
     border: none;
@@ -2826,6 +2826,10 @@ div.messages li {
     display: none;
     padding: 20px 0;
     font-size: 14px;
+    border: 1px solid #f0e8e5;
+    box-shadow:0px 3px 9px #333333;
+    -moz-box-shadow:0px 3px 9px #333333;
+    -webkit-box-shadow:0px 3px 9px #333333;
 }
 
 #first-select.long-select .inner-container div{
