--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -116,7 +116,7 @@
 
             //Type into input element inside select
             $(".long-select input").keyup(function(e) {
-                userTypeInput($(this));
+                userTypeInputFirst($(this));
             })
 
             $(".short-select input").keyup(function(e) {
